--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,9 +1,10 @@
 <html>
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="icon" type="image/svg+xml" href="https://example.com/image.svg">
   </head>
   <body style="background-color:white;">
-    <div class="container mt-5" style="background-color:grey;">
+    <div class="container mt-5" style="background-color:#e5e5e5;">
       <h1 class="text-center">Login</h1>
       <form action= '/' method='POST'>
         <div class="form-group">
