--- a/views/form.ejs
+++ b/views/form.ejs
@@ -10,7 +10,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>PeerHabit</title>
-
+  <link rel="icon" type="image/svg+xml" href="https://example.com/image.svg">
   <link href="/css/style.css" rel="stylesheet" type="text/css" />
 </head>
 
